# 3P_InitBoardFW

./: .clang-format  .gitignore  logger.code-workspace
3P_FPV_2_0/: .gitignore  .ninja_deps  .ninja_log  3P_FPV_2_0.code-workspace  3P_FPV_2_0.ioc  CMakeLists.txt  TIMER_REDESIGN_SUMMARY.md
3P_IBWingInitBoard_V1_0/: .mxproject  3P_IBWingInitBoard_V1_0.ioc  CMakeLists.txt
3P_WingMavlinink_V1_0/: .gitignore  3P_WingMavlinink_V1_0.code-workspace  3P_WingMavlinink_V1_0.ioc  CMakeLists.txt
G431CBU6_Wing_Example/: .mxproject  CMakeLists.txt  CUBEMX_FIX_README.md  G431CBU6_Wing_Example.code-workspace  G431CBU6_Wing_Example.ioc  PINOUT.md  fix_cubemx.ps1
IB_Wing_STM32G431CBT6/: .mxproject  CMakeLists.txt  IB_Wing_STM32G431CBT6.ioc  PINOUT.md  README.md  (+1 more)
docs/: first-build.md  (+3 more)
logger/main/: CMakeLists.txt  app_commands.h  app_errors.h  app_logic.c  app_logic.h  app_state.c  app_state.h  config_manager.c  config_manager.h  generated_assets.c  generated_assets.h  idf_component.yml  main.c  usb_msc.c  usb_msc.h
logger/main/PsychiHttp/: CustomString.h  Print.cpp  Print.h  PsychicClient.cpp  PsychicCore.h  PsychicEndpoint.cpp  PsychicEndpoint.h  PsychicFileResponse.cpp  PsychicFileResponse.h  PsychicHandler.cpp  PsychicHttp.h  PsychicHttpServer.cpp  PsychicHttpServer.h  PsychicHttpsServer.h  PsychicJson.cpp  PsychicJson.h  PsychicRequest.cpp  PsychicResponse.cpp  PsychicResponse.h  PsychicUploadHandler.cpp  PsychicUploadHandler.h  PsychicWebParameter.h  PsychicWebSocket.cpp  PsychicWebSocket.h  TemplatePrinter.h  async_worker.cpp  async_worker.h  fs_utils.cpp  fs_utils.h  ip_utils.cpp  ip_utils.h  url_utils.cpp  url_utils.h  wifi_utils.cpp  wifi_utils.h
logger/main/io/: io_manager.c  io_manager.h
logger/main/modules/: button.c  button.h  led_module.c  led_module.h  logger_frame_link.h  logger_module.c  logger_module.h  remote_accel_reader.c  remote_accel_reader.h  rpc_server.c  rpc_server.h  web_server.c  web_server.h  web_server_cpp.cpp
logger/main/platform/: system.c  system.h
logger/main/util/: bootlog.c  bootlog.h  event_sender.c  event_sender.h  time-util.c  time-util.h
logger/main/wifi/: captive_portal.c  captive_portal.h  file_upload.c  file_upload.h  upload_common.c  upload_common.h  wifi.c  wifi.h
(+210 files in other folders)
